33-aws-eks-ecomm-3-istio/3-Policies/allow-cart-query-get.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: sp-cart-query-viewer
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      app: sp-cart-query-svc
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
