33-aws-eks-ecomm-3-istio/3-Policies/allow-order-get.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: order-viewer
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      app: order-svc
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
