33-aws-eks-ecomm-3-istio/3-Policies/allow-payment-get.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: payment-viewer
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      app: payment-svc
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
