33-aws-eks-ecomm-3-istio/3-Policies/allow-productservice_get.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: product-viewer
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      app: product-svc
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
