33-aws-eks-ecomm-3-istio/3-Policies/allow-user-get.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: user-viewer
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      app: user-svc
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
