33-aws-eks-ecomm-3-istio/3-Policies/allow_ui_get.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ui-allow"
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      app: shoppingportalui
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
